docs: 응용 프로그램이 운영체제마다 다른 이유

--- a/docs/os/공룡책/운영체제-구조.mdx
+++ b/docs/os/공룡책/운영체제-구조.mdx
@@ -352,3 +352,98 @@ shard_memeory_create()와 shared_memory_attach() 시스템 콜을 사용한다.
   프로그램 프로세스는 서비스, 서브 시스템 또는 데몬으로 알려져있다. 전형적인 시스템은 수십개의
   데몬을 가지고 있다. 게다가 운영체제가 중요한 활동을 커널 문맥에서가 아니라 사용자 문맥에서
   실행해야 하는 경우, 데몬을 이용해서 이 작업을 수행할 수 있다.
+
+## 링커와 로더(Linkers and Loaders)
+
+일반적으로 프로그램은 디스크에 이진 실행 파일(예: a.out 또는 prog.exe)로 존재한다.
+CPU에서 실행하려면 프로그램을 메모리로 가져와 프로세스 형태로 배치되어야 한다.
+
+소스 파일은 임의의 물리 메모리 위치에 적재되도록 설계된 오브젝트 파일로 컴파일된다.
+이러한 형식을 재배치 가능 오브젝트 파일이라고 한다. 링커는 이러한 재배치 가능 오브젝트
+파일을 하나의 이진 실행 파일로 결합한다. 링킹 단계에서 표준 C 또는 수학 라이브러리와
+같은 다른 오브젝트 파일 또는 라이브러리도 포함될 수 있다.
+
+로더는 이진 실행 파일을 메모리에 적재하는 데 사용되며, CPU는 코어에서 실행할 수 있는
+상태가 된다. 링크 및 로드와 관련된 활동은 재배치로, 프로그램 부분에 최종 주소를 할당하고
+프로그램 코드와 데이터를 해당 주소와 일치하도록 조정하여 프로그램이 실행될 때 코드가
+라이브러리 함수를 호출하고 변수에 접근할 수 있게 한다.
+
+<Image
+  src="https://user-images.githubusercontent.com/63354527/215243534-fd96389f-ae7d-4f60-b4e5-4f9ba05aafe9.png"
+  description="링커와 로더의 역할"
+  referenceLink="https://user-images.githubusercontent.com/63354527/215243534-fd96389f-ae7d-4f60-b4e5-4f9ba05aafe9.png"
+/>
+
+<br />
+
+UNIX 시스템의 명령어 라인에 프로그램 이름을 입력하면 셸은 먼저 fork() 시스템 콜을 사용하여
+프로그램을 실행하기 위한 새 프로세스를 생성한다. 그런 다음 셀은 exec() 시스템 콜로 로더를
+호출하고 exec()에 실행 파일 이름을 전달한다. 그런 다음 로더는 새로 생성된 프로세스의
+주소 공간을 사용하여 지정된 프로그램을 메모리에 적재한다. GUI 인터페이스를 사용하는 경우
+실행 파일과 연관된 아이콘을 두 번 클릭하면 유사한 메커니즘을 사용하여 로더가 호출된다.
+
+지금까지 설명한 과정에서 모든 라이브러리가 실행 파일에 링크되어 메모리에 적재된다고
+가정한다. 실제로 시스템 대부분에서는 프로그램이 적재될 때 라이브러리를 동적으로 링크할 수
+있게 한다. 여러 프로세스가 동적으로 링크된 라이브러리를 공유할 수 있어서 메모리 사용이
+크게 절약될 수 있다.
+
+오브젝트 파일 및 실행 파일은 일반적으로 표준화된 형식을 가진다. 이 표준 형식은
+컴파일된 기계 코드 및 프로그램에서 참조되는 함수 및 변수에 대한 메타데이터를 포함하는
+기호 테이블을 포함한다. UNIX 및 Linux 시스템의 경우 이 표준 형식을
+ELF(Executable and Linkable Format)라고 한다. 재배치 가능 파일과 실행 파일
+각각을 위한 별도의 ELF 형식이 사용된다. 실행 가능 파일의 ELF 파일의 정보 중 하나는
+프로그램의 시작점이며, 프로그램을 실행할 때 실행할 첫 번째 명령어의 주소가 저장되어
+있다.
+
+## 응용 프로그램이 운영체제마다 다른 이유
+
+각 운영체제는 고유한 시스템 콜 집합을 제공한다. 시스템 콜은 응용 프로그램이 사용할 수
+있도록 운영체제가 제공하는 서비스 집합의 일부이다. 시스템 콜은 어느 정도 같더라도 다른
+장벽으로 인해 응용 프로그램을 다른 운영체제에서 실행하기 어렵다.
+
+다음 세 가지 방법 중 한 가지를 사용하여 응용 프로그램이 여러 운영체제에서 실행될 수 있게
+만들 수 있다.
+
+1. 응용 프로그램은 운영체제마다 인터프리터가 제공하는 인터프리터 언어로 작성도리 수 있다.
+   인터프리터는 소스 프로그램의 각 라인을 읽고 상응하는 기계어 명령을 실행하고, 해당 운영체제의
+   시스템 콜을 호출한다. 기계어 코드로 구성된 응용 프로그램에 비해 성능이 떨어지고, 인터프리터는
+   각 운영체제 기능의 일부만 제공하므로 관련 응용 프로그램의 기능도 제한될 수 있다.
+2. 응용 프로그램은 실행 중인 응용 프로그램을 포함하고 있는 가상 머신을 가진 언어로 작성될 수
+   있다. 가상 머신은 언어의 RTE 중 일부이다. 이 방법의 예로 Java를 들 수 있다. Java는
+   로더, 바이트 코드 검증기 및 Java 응용 프로그램을 Java 가상 머신으로 적재하는 기타 구성요소를
+   RTE로 가지고 있다. 이 RTE는 메인 프레임에서 스마트폰에 이르기까지 많은 운영체제에 이식 또는
+   개발되었으며 이론적으로 모든 Java 앱은 RTE가 제공되는 어디서나 실행될 수 있다. 이런 종류의
+   시스템은 위에서 설명한 인터프리터 시스템과 유사한 단점을 가진다.
+3. 응용 프로그램 개발자는 컴파일러가 기기 및 운영체제 고유의 이진 파일을 생성하는 표준 언어 또는
+   API를 사용할 수 있다. 응용 프로그램은 실행될 각 운영체제로 이식되어야 한다. 이 이식은 많은
+   시간이 소요될 수 있으며 많은 시험과 디버깅을 거쳐 응용 프로그램의 새 버전마다 수행되어야 한다.
+
+이론적으로 세가지 접근 방식은 다양한 운영체제에서 실행될 수 있는 응용 프로그램을 개발하기 위한 간단한
+솔루션을 제공한다. 그러나 일반적으로 응용 프로그램의 이동성이 부족한데는 여러가지 원인이 있다.
+이로 인해 여전히 크로스 플랫폼 응용 프로그램을 개발하는 것이 어려운 작업이다. 응용 프로그램 수준에서
+운영체제와 함께 GUI 인터페이스와 같은 기능을 제공하는 라이브러리가 포함되어 있으며, 하나의 API 집합
+를 호출하도록 설계된 응용 프로그램은 해당 API를 제공하지 않는 운영체제에서는 작동하지 않는다.
+
+- 각 운영체제에는 헤더, 명령어 및 변수의 배치를 강제하는 응용 프로그램 이진 형식이 있다. 이러한
+  구성요소는 명시된 구조 형태로 실행 파일 내의 특정 위치에 있어야 운영체제가 파일을 열고 응용 프로그램을
+  적재하여 올바르게 실행할 수 있다.
+- CPU는 다양한 명령어 집합을 가지며 해당 명령어가 포함된 응용 프로그램만 올바르게 실행할 수 있다.
+- 운영체제는 응용 프로그램이 파일 생성과 네트워크 연결 열기와 같은 다양한 활동을 요청할 수 있는 시스템
+  콜을 제공한다. 이러한 시스템 콜은 사용되는 피연산자, 피연산자 순서, 응용 프로그램이 시스템 콜을 호출하는
+  방법, 시스템 콜 번호, 의미, 및 반환 결과를 포함하여 여러 측면에서 운영체제마다 다르다.
+
+이러한 구조적 차이점을 완전히 해결하지는 못했지만 해결하는 데 도움이 되는 몇가지 방법이 있다. 예를 들어,
+Linux와 거의 모든 UNIX 시스템에서 이진 실행 파일은 ELF 형식을 채택하였다. ELF는 Linux 및 UNIX
+시스템에서 공통 표준을 제공하지만 ELF 형식은 특정 컴퓨터 아키텍쳐와 연관되어 있지 않으므로 실행 파일이
+다른 하드웨어 플랫폼에서 실행될 것이라는 보장은 없다.
+
+이진 코드의 여러 구성요소가 주어진 아키텍처에서 특정 운영체제와 상호작용 할 수 있는 방법을 정의하는데
+ABI(application binary interface)가 사용된다. ABI는 주소 길이, 시스템 콜에 매개변수를 전달하는
+방법, 런타임 스택 구성, 시스템 라이브러리의 이진 형식 및 데이터 유형의 크기 등의 하위 수준의 세부 정보를
+명시한다. 일반적으로 ABI는 특정 아키텍처에 대해 명시된다. 따라서 ABI는 아키텍처 수준의 API이다.
+이진 실행 파일이 특정 ABI에 따라 컴파일되고 링크된 경우 해당 ABI를 지원하는 다른 시스템에서 실행될 수
+있어야 한다. 그러나 특정 아키텍처에서 실행되는 특정 운영체제에 대해 ABI가 정의되어 있기 때문에 ABI는
+플랫폼 간 호환성을 거의 제공하지 않는다.
+
+요약하면, 이러한 모든 차이점은 특정 CPU 유형의 특정 운영체제에서 인터프리터, RTE 또는 이진 실행 파일을
+작성하고 컴파일하지 않으면 응용 프로그램이 실행되지 않는다는 것을 의미한다.
