--- a/docs/os/공룡책/운영체제-구조.mdx
+++ b/docs/os/공룡책/운영체제-구조.mdx
@@ -744,3 +744,29 @@ LXSS 서비스는 fork()의 초기 작업 중 일부를 수행한 다음 CreateP
 3. 운영체제를 컴파일한다.
 4. 운영체제를 설치한다.
 5. 컴퓨터와 새 운영체제를 부팅한다.
+
+### 시스템 부트
+
+운영체제가 생성된 후는 하드웨어에서 새 운영체제를 사용할 수 있어야 한다. 그러나 하드웨어는
+커널의 위치 또는 커널을 적재하는 방법을 어떻게 알 수 있을까? 커널을 적재하여 컴퓨터를 시작하는
+과정을 시스템 부팅이라고 한다.
+
+부팅 과정은 다음과 같다.
+
+1. 부트 스트랩 프로그램 또는 부트 로더라고 불리는 작은 코드가 커널의 위치를 찾는다.
+2. 커널이 메모리에 적재되고 시작된다.
+3. 커널은 하드웨어를 초기화한다.
+4. 루트 파일 시스템이 마운트된다.
+
+일부 컴퓨터 시스템은 다단계 부팅 과정을 사용한다. 컴퓨터 전원을 처음 켜면 BIOS라고 하는
+비휘발성 펌웨어에 있는 소형 부트 로더가 실행된다. 이 초기 부트 로더는 일반적으로 부트 블록이라고
+하는 디스크의 정해진 위치에 있는 두 번째 부트 로더를 적재하는 작업만 한다. 부트 블록에 저장된
+프로그램은 전체 운영체제를 메모리에 적재하고 실행을 시작하기에 충분히 정교할 수 있다.
+더 일반적으로, 이 부트 로더는 간단한 코드로서(하나의 디스크 블록에 저장되어야 하기 때문에) 디스크의
+주소와 부트스트랩 프로그램 나머지의 길이만 알고 있다.
+
+Windows, Linux 및 macOS와 iOS 및 Android를 비롯한 대부분의 운영체제의 부트 로더는 하드웨어
+문제 진단, 손상된 파일 복구 및 운영체제 재설치 등의 작업을 수행할 수 있는 복구 모드 또는 단일 사용자 모드로
+부팅할 수 있는 기능을 제공한다.
+
+## 운영체제 디버깅
