docs: process concept

--- a/docs/os/프로세스.mdx
+++ b/docs/os/프로세스.mdx
@@ -1,7 +1,48 @@
-# 프로세스의 상태
+import Image from '@site/src/components/Image';
+
+# 프로세스
+
+## Concept
+
+운영체제에서 모든 CPU 활동을 무엇이라고 부를 것인가에 대한 질문이 있다. 초창기 컴퓨터는
+작업을 실행하는 일괄처리 시스템이었고, 사용자 프로그램 또는 태스크(task)를 실행하는 시분할
+시스템이 뒤를 이었다. 단일 사용자 시스템에서도 사용자는 워드 프로세서, 웹 브라우저 및
+전자 메일 패키지와 같은 여러 프로그램을 한 번에 실행할 수 있다. 또한 멀티 태스킹을
+지원하지 않는 임베디드 장치에서와 같이 컴퓨터가 한 번에 하나의 프로그램만 실행할 수 있더라도
+운영체제는 메모리 관리와 같은 자체 프로그램된 내부 활동을 지원해야 할 수도 있다.
+여러 측면에서 이런 모든 활동은 유사하므로 이러한 모든 활동을 프로세스라고 부를 수 있다.
+
+**프로세스는 실행 중인 프로그램이다..** 프로세스의 현재 활동의 상태는 프로그램 카운터 값과
+프로세서 레지스터의 내용으로 나타낸다.
+
+<Image
+  src="https://user-images.githubusercontent.com/63354527/217720856-013fa9d7-5335-456a-a2f5-84a0900572b4.png"
+  referenceLink="https://user-images.githubusercontent.com/63354527/217720856-013fa9d7-5335-456a-a2f5-84a0900572b4.png"
+  description="프로세스 메모리 배치"
+  height="300px"
+/>
+
+<br />
+
+프로세스는 일반적으로 네개의 섹션으로 구성된다.
+
+- 텍스트 섹션: 실행 코드
+- 데이터 섹션: 전역 변수
+- 힙 섹션: 프로그램 실행 중에 동적으로 할당되는 메모리
+- 스택 섹션: 함수를 호출할 때 임시 데이터 저장장소(예: 함수 매개변수, 복귀 주소 및 지역 변수)
+
+텍스트 및 데이터 섹션의 크기는 고정되기 때문에 프로그램 실행 시간 동안 크기가 변하지 않는다.
+그러나 스택 및 힙 섹션은 호출될 때마다 함수 매개변수, 지역 변수 및 복귀 주소를 포함하는 활성화
+레코드(activation record)가 스택에 푸쉬된다. 함수에서 제어가 되돌아오면 스택에서 활성화
+레코드가 팝 된다. 마찬가지로 메모리가 동적으로 할당됨에 따라 힙이 커지고 메모리가 시스템에
+반환되면 축소된다. 스택 및 힙 섹션이 서로의 방향으로 커지더라도 운영체제는 서로 겹치지 않도록
+해야 한다.
+
+## 프로세스 상태
 
 컴퓨터를 사용할 때 여러 프로세스들이 빠르게 번갈아 가면서 실행됩니다.  
-그 과정에서 하나의 프로세스는 여러 상태를 거치며 실행됩니다. 그리고 운영체제는 프로세스의 상태를 PCB를 통해 인식하고 관리합니다.  
+그 과정에서 하나의 프로세스는 여러 상태를 거치며 실행됩니다. 그리고 운영체제는 프로세스의 상태를
+PCB를 통해 인식하고 관리합니다.  
 프로세스 상태를 표현하는 방식은 운영체제마다 조금씩 차이가 있지만, 프로세스가 가질 수 있는 대표적인 상태는 `생성`, `준비`, `실행`, `대기`, `종료` 상태가 있습니다.
 
 ![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fbp3Mzr%2FbtrUh4mQvJo%2Fsm9kK4Z949elUg9KgARzk1%2Fimg.png)
@@ -43,3 +84,6 @@
 
 종료 상태(terminated)는 프로세스가 종료된 상태입니다. 프로세스가 종료되면 운영체제는 PCB와 프로세스가 사용한 메모리를 정리합니다.
 
+## Referecne
+
+- Operating Systems Concept
