--- a/docs/web/쿠키와세션.mdx
+++ b/docs/web/쿠키와세션.mdx
@@ -2,6 +2,74 @@
 title: 쿠키와 세션
 ---
 
+import Image from '@site/src/components/Image';
+
+## HTTP
+
+HTTP 프로토콜은 비연결성(Connectionless)이며 무상태성(Stateless)라는 특징을 지닌 프로토콜의 한 종류이다.
+
+### 비연결성
+
+클라이언트가 서버에게 특정 요청을 했을 때, 해당 요청에 대한 응답 이후에 연결을 끊는 방식을 의미한다.
+
+### 무상태성
+
+클라이언트의 현재 지니고 있는 상태 정보를 가지지 않는 처리 방식이다. 클라이언트와의 통신을 통해 데이터를 주고 받았다고 해도,
+바로 다음 통신에서 방금 전달한 데이터를 유지하지 않는 것을 의미한다.
+
+Stateless라는 특징으로 인해 사용자는 다른 페이지로 넘어갈 때마다 로그인을 다시하거나, 특정 상품을 장바구니에
+추가했는데 선택한 상품이 존재하지 않는 상황들이 발생할 수 있다. 즉, 클라이언트의 상태를 필요로하는 stateful한
+특징을 띄는 서비스가 점점 많아졌다. 이러한 무상태성으로 인해 발생하는 사용자 경험을 해결하기 위해 생각해낸 것이
+쿠키와 세션의 사용이다. 즉, 클라이언트와 주고 받는 정보를 유지하는 Stateful한 성격을 띄게하기 위해 사용되는 것이
+쿠키와 세션이다.
+
+## Cookie
+
+Cookie란 사용자가 특정 웹 사이트에 방문할 경우, 웹 서버가 사용자의 컴퓨터에 파일 또는 메모리에 저장하는 작은
+기록 정보 파일이다. 파일에 담긴 정보는 인터넷 사용자가 같은 웹 사이트를 다시 방문했을 때, 필요시 참고할 수 있는
+정보를 의미한다.
+
+<Image
+  src="https://user-images.githubusercontent.com/63354527/228405888-f5cf6a04-c800-4b12-92b4-fc80f9ffef9e.png"
+  referenceLink="https://velog.io/@tnehd1998/Cookie-vs-Session"
+  description="쿠키의 구성요소"
+/>
+
+- 이름(Name): 쿠키를 구별하는데 사용
+- 값(Value): 각 쿠키에 저장된 값을 의미
+- 유효기간(Expires): 쿠키가 유지되는 기간을 의미
+- 도메인(Domain): 쿠키가 사용되는 도메인을 의미
+- 경로(path): 쿠키를 전송할 경로를 의미
+
+### Cookie의 종류
+
+쿠키의 종류는 크게 4가지가 존재한다.
+
+1. Session Cookie: 만료시간을 설정하고 메모리에만 저장되며 브라우저 종료시 해당 쿠키는 삭제된다.
+2. Persistent Cookie: 장기간 유지되는 쿠키이며, 파일로 저장되어 브라우저 종료와 관계없이 사용할 수 있다.
+3. Secure Cookie: HTTPS에서만 사용되며, 쿠키 정보가 암호화되어 전송된다.
+4. Third-Party Cookie: 유입 경로를 추적하기 위해 사용되며, 광고 배너 등을 관리할 때 사용된다.
+
+<Image
+  src="https://velog.velcdn.com/images/tnehd1998/post/c910acdd-165c-4916-b7a9-7c04d7d26958/image.jpeg"
+  referenceLink="https://velog.io/@tnehd1998/Cookie-vs-Session"
+  description="쿠키의 종류"
+/>
+
+### Cookie의 동작 원리
+
+1. 클라이언트가 페이지를 요청한다.
+2. 서버는 쿠키를 생성한다.
+3. HTTP 헤더에 생성한 쿠키를 포함시켜 응답한다.
+4. 넘겨 받은 쿠키 만료 기간이 될때까지 클라이언트에서 보관한다.
+5. 같은 요청을 하는 경우 HTTP 헤더에 쿠키를 함께 전송한다.
+6. 서버는 전달받은 쿠키를 통해 변경 할 필요가 있을 때 쿠키를 업데이트해서 변경된 쿠키를 HTTP 헤더에 포함시켜 응답한다.
+
+해당 방식으로 작동하는 Cookie를 통해 아이디와 비밀번호를 기억한 후, 자동 입력 해주는 자동 로그인과 특정 웹 사이트 팝업창의
+"오늘 이 창을 다시 보지 않기"와 같은 기능을 제공해준다.
+
+### Cookie의 문제점
+
 HTTP의 무상태성이라는 특징 때문에 서버는 지금 요청하는 클라이언트가 인증된 유저(authunticate) 인지 알 길이
 없고, 응답하기 전에 매번 인증을 거쳐야 합니다. 이러한 무상태성의 단점을 보완하는것이 세션의 존재 이유입니다.
 다시 말해 세션은 응답자가 요청자의 상태를 저장하는 것입니다. 세션은 다양한 곳에 형성될 수 있씁니다. 웹 서버의
@@ -19,3 +87,4 @@ HTTP 통신의 특징으로는 비연결성(Connectionless)과 무상태성(Stat
 ## Reference
 
 - [쿠키와 세션을 긴밀하게 이해하는 법](https://velog.io/@ksi05503/%EC%BF%A0%ED%82%A4%EC%99%80-%EC%84%B8%EC%85%98%EC%9D%84-%EA%B8%B4%EB%B0%80%ED%95%98%EA%B2%8C-%EC%9D%B4%ED%95%B4%ED%95%98%EB%8A%94-%EB%B2%95)
+- [Cookie vs Session](https://velog.io/@tnehd1998/Cookie-vs-Session)
