--- a/docs/os/DeadLock.mdx
+++ b/docs/os/DeadLock.mdx
@@ -10,4 +10,5 @@ import Image from '@site/src/components/Image';
 즉 둘이상의 프로세스가 다른 프로세스를 점유하고 있는 자원을 서로 기다릴 때 무한 대기에 빠지는 상황을 말한다.
 자원을 획득하지 못하고 있다는 점에서 기아 상태(starvation state)와 비슷하지만 이것은 영원히 헤어나올 수 없는 상태라는 점에서 차이가 있다.
 
-데드락을 이해하기 위해서는 컴퓨터 시스템에서 자원을 획득하는 과정을 먼저 알아야한다.
+데드락을 이해하기 위해서는 컴퓨터 시스템에서 자원을 획득하는 과정을 먼저 알아야한다. 여기서 자원이란 CPU, 파일 메모리, 락객체등등 컴퓨터 시스템에서
+여러분이 사용할 수 있는 모든 것들을 총칭하는
