--- a/docs/network/컴퓨터 네트워크.mdx
+++ b/docs/network/컴퓨터 네트워크.mdx
@@ -1,3 +1,8 @@
+# 컴퓨터 네트워크
+
+컴퓨터 네트워크는 여러 대의 컴퓨터를 서로 연결하여 서로 데이터를 주고 받을 수 있도록 망이 사전에 구축된 것을 말한다.
+연결되는 컴퓨터의 대수가 많아질수록 네트워크의 규모는 커지고, 규모가 커진만큼 더 다양한 정보를 교환하거나 통신방식을 사용할 수 있다.
+
 # 인터넷
 
 ## 인터넷의 역사
