docs: TCP / IP 내용 보완

--- a/docs/network/ARP.mdx
+++ b/docs/network/ARP.mdx
@@ -1,3 +1,9 @@
 ---
 title: ARP
 ---
+
+ARP 프로토콜이란, 소프트웨어적으로 할당된 논리 주소인 IP 주소(L3, 네트워크 계층)를
+실제적인 물리주소인 MAC 주소(Media Access Control / L2, 데이터 링크 계층)으로
+바꾸어주는 역할을 하는 '주소 해석 프로토콜'을 의미한다.
+
+반대로 MAC 주소를 가지고 IP 주소를 알아내는 프로토콜은 RARP 프로토콜이라고 한다.
