--- a/docs/network/3,4 Way Handshaking.mdx
+++ b/docs/network/3,4 Way Handshaking.mdx
@@ -1,3 +1,7 @@
+---
+title: 3, 4 Way Handshaking
+---
+
 import Image from '@site/src/components/Image';
 
 3 Way Handshaking 과정은 TCP 프로토콜 통신을 연결하기위한 과정이고
