--- a/docs/network/google.com.mdx
+++ b/docs/network/google.com.mdx
@@ -5,19 +5,16 @@ sidebar_position: 1
 
 import Image from '@site/src/components/Image';
 
-구글 웹 서버의 80 포트로 HTTP Request를 보내는 것이다. 요청을 해당 웹 서버로 전달하기 위해 패킷을 만들어야 한다.
-패킷에는 TCP/IP 4계층에서 각 계층에 필요한 정보들이 담겨야 한다.
+이 질문은 컴퓨터 네트워크에서 데이터가 어떻게 전달되는지와 브라우저에서 웹 페이지를 어떻게 렌더링하는지에 대한 모든 것을 포함한다.
+
+브라우저에서 google.com을 검색하면 구글 웹 서버의 80번 포트로 HTTP Request를 보내는 것이다.
+요청을 웹 서버로 전달하기 위해서는 **패킷**을 만들어야한다. 패킷에는 TCP/IP 4계층에서 각 계층에 필요한 정보들이 담겨야 한다.
 
 Application Layer에서는 HTTP 프로토콜, Transport Layer에서는 TCP, Internet Layer에서는 IP, Network Access Layer에서는 Ethernet 프로토콜을 사용한다.
 
-DNS 서버 주소는 컴퓨터에 저장되어 있다.
-DNS도 Application Layer의 프로토콜이다. (53번 포트를 사용)
+네트워크와 관련된 내용은 TCP/IP에서 다룬다.
 
-Domain이 담긴 Query를 DNS 서버에 보내면 DNS 서버는 해당 Domain의 IP 주소를 반환한다.
-
-## 개요
-
-google.com을 주소창에 입력하면 일아나는 일은 크게 세가지로 구분할 수 있다.
+웹 서버로부터 HTML, CSS, JavaScript를 받아오면 이후엔 브라우저의 Critical Rendering Path를 따른다.
 
 ## Handling Inputs
 
@@ -55,6 +52,12 @@ URL인지를 판단한다.
 위 그림과 같이 로딩 스피너가 나타나고, 네트워크 스레드가 DNS lookup과 같은 적절한 프로토콜을 사용하여
 요청에 대하여 TLS(Transfort Layer Security) connection을 만든다. 만약 네트워크 스레드로
 HTTP 301 response가 오면 UI 스레드와 상호작용하여 새로운 URL로 redirect한다.
+
+:::tip
+DNS 서버 주소는 컴퓨터에 저장되어 있다.
+DNS도 Application Layer의 프로토콜이다. (53번 포트를 사용)
+Domain이 담긴 Query를 DNS 서버에 보내면 DNS 서버는 해당 Domain의 IP 주소를 반환한다.
+:::
 
 :::info
 `nslookup google.com`을 입력하면 구글의 IP 주소를 얻어올 수 있고 이 주소를 입력해도 똑같은 구글 창이 뜬다.
@@ -135,12 +138,7 @@ HTTP 301 response가 오면 UI 스레드와 상호작용하여 새로운 URL로 
   description="Critical Rendering Path"
 />
 
-사용자가 웹 브라우저를 통해 google.com을 입력하면 URL 주소 중 도메인 네임 부분을
-DNS 서버에서 검색한다. DNS 서버에서 해당 도메인 네임에 해당하는 IP 주소를 찾아 사용자가
-입력한 URL 정보와 함께 전달한다. 브라우저는 HTTP 프로토콜을 사용하여 요청 메시지를
-생성하고 HTTP 요청 메시지는 TCP/IP 프로토콜을 사용하여 서버로 전송된다. 서버는 response
-메시지를 생성하여 다시 브라우저에게 데이터를 전송한다. 브라우저는 response를 받아
-파싱하여 화면에 렌더링한다.
+<br />
 
 브라우저가 URL에 적힌 값을 파싱해서 HTTP Request Message를 만들고, OS에 전송을 요청한다. 이 때,
 Domain으로 요청을 보낼 수 없기 때문에 DNS Lookup을 수행한다.
@@ -148,6 +146,8 @@ Domain으로 요청을 보낼 수 없기 때문에 DNS Lookup을 수행한다.
 DNS Lookup 과정은 크롬의 경우 브라우저 -> hosts 파일 -> DNS cache의 순서로 도메인에 매칭되는
 ip를 찾는다.
 일반적으로 설명하는 DNS Lookup은 루트 도메인 서버에서부터 서브 도메인 서버순으로 찾게된다.
+
+HTTP 요청 메시지는 TCP/IP 프로토콜을 사용하여 서버로 전송된다.
 
 이 요청은 프로토콜 스택이라는 OS에 내장된 네트워크 제어용 소프트웨어에 의해 패킷에 담기고 패킷에
 제어정보를 덧붙여 LAN 어댑터에 전송하고, LAN 어댑터는 이를 전기신호로 변환시켜 송출한다.
@@ -159,6 +159,12 @@ ip를 찾는다.
 
 웹 서버에 도착한 패킷은 프로토콜 스택이 패킷을 추출하여 메시지를 복원하고 웹 서버 애플리케이션에 넘긴다.
 애플리케이션은 요청에 대한 응답 데이터를 작성하여 클라이언트로 회송하고, 이는 전달된 방식 그대로 전송된다.
+
+## 요약
+
+브라우저는 HTTP 프로토콜을 사용하여 요청 메시지를 생성하고 HTTP 요청 메시지는 TCP/IP
+프로토콜을 사용하여 서버로 전송된다. 서버는 response 메시지를 생성하여 다시 브라우저에게
+데이터를 전송한다. 브라우저는 response를 받아 파싱하여 화면에 렌더링한다.
 
 ## Reference
 
