--- a/docs/operating-system/개념/1.mdx
+++ b/docs/operating-system/개념/1.mdx
@@ -18,8 +18,8 @@ export const Image = ({ src, size }) => {
         width={size}
         height={size}
         style={{
-          display: "block",
-          margin: "auto",
+          display: 'block',
+          margin: 'auto',
         }}
       />
       <br />
@@ -91,7 +91,7 @@ export const Image = ({ src, size }) => {
 
 > 한 응용 프로그램이 하드 디스크에 데이터를 저장하려 한다고 가정
 
-1. 상요자 모드로 실행되는 동안에는 자원(하드 디스크)에 접근이 불가하다.
+1. 사용자 모드로 실행되는 동안에는 자원(하드 디스크)에 접근이 불가하다.
 2. 응용 프로그램은 하드 디스크에 데이터를 저장하는 시스템 호출을 발생시켜 커널 모드로 전환한다.
 3. 운영체제 내의 `하드 디스크에 데이터를 저장하는 코드`를 실행함으로써 하드 디스크에 접근한다.
 4. 하드 디스크에 접근이 끝나면 사용자 모드로 복귀하여 실행을 계속해 나간다.
