--- a/docs/operating-system/Process.mdx
+++ b/docs/operating-system/Process.mdx
@@ -1,19 +1,14 @@
 import Image from '@site/src/components/Image';
 
-# 프로세스
+# Process
 
-## Concept
-
-운영체제에서 모든 CPU 활동을 무엇이라고 부를 것인가에 대한 질문이 있다. 초창기 컴퓨터는
-작업을 실행하는 일괄처리 시스템이었고, 사용자 프로그램 또는 태스크(task)를 실행하는 시분할
-시스템이 뒤를 이었다. 단일 사용자 시스템에서도 사용자는 워드 프로세서, 웹 브라우저 및
-전자 메일 패키지와 같은 여러 프로그램을 한 번에 실행할 수 있다. 또한 멀티 태스킹을
-지원하지 않는 임베디드 장치에서와 같이 컴퓨터가 한 번에 하나의 프로그램만 실행할 수 있더라도
-운영체제는 메모리 관리와 같은 자체 프로그램된 내부 활동을 지원해야 할 수도 있다.
-여러 측면에서 이런 모든 활동은 유사하므로 이러한 모든 활동을 프로세스라고 부를 수 있다.
-
-**프로세스는 실행 중인 프로그램이다..** 프로세스의 현재 활동의 상태는 프로그램 카운터 값과
+**프로세스는 실행 중인 프로그램이다.** 프로세스의 현재 활동의 상태는 프로그램 카운터 값과
 프로세서 레지스터의 내용으로 나타낸다.
+
+- 컴퓨터에서 연속적으로 실행되고 있는 프로그램
+- 메모리에 올라와 실행되고 있는 프로그램의 인스턴스
+- 운영체제로부터 시스템 자원을 할당받는 작업의 단위
+- 즉, 동적인 개념으로는 실행된 프로그램
 
 <Image
   src="https://user-images.githubusercontent.com/63354527/217720856-013fa9d7-5335-456a-a2f5-84a0900572b4.png"
@@ -26,10 +21,10 @@ import Image from '@site/src/components/Image';
 
 프로세스는 일반적으로 네개의 섹션으로 구성된다.
 
-- 텍스트 섹션: 실행 코드
-- 데이터 섹션: 전역 변수
-- 힙 섹션: 프로그램 실행 중에 동적으로 할당되는 메모리
-- 스택 섹션: 함수를 호출할 때 임시 데이터 저장장소(예: 함수 매개변수, 복귀 주소 및 지역 변수)
+- Code: 코드 자체를 구성하는 메모리 영역(프로그램 명령)
+- Data: 전역 변수, 정적 변수, 배열 등
+- Heap: 프로그램 실행 중에 동적으로 할당되는 메모리
+- Stack: 함수를 호출할 때 임시 데이터 저장장소(예: 함수 매개변수, 복귀 주소 및 지역 변수)
 
 텍스트 및 데이터 섹션의 크기는 고정되기 때문에 프로그램 실행 시간 동안 크기가 변하지 않는다.
 그러나 스택 및 힙 섹션은 호출될 때마다 함수 매개변수, 지역 변수 및 복귀 주소를 포함하는 활성화
@@ -40,16 +35,21 @@ import Image from '@site/src/components/Image';
 
 ## 프로세스 상태
 
-컴퓨터를 사용할 때 여러 프로세스들이 빠르게 번갈아 가면서 실행됩니다.  
-그 과정에서 하나의 프로세스는 여러 상태를 거치며 실행됩니다. 그리고 운영체제는 프로세스의 상태를
-PCB를 통해 인식하고 관리합니다.  
-프로세스 상태를 표현하는 방식은 운영체제마다 조금씩 차이가 있지만, 프로세스가 가질 수 있는 대표적인 상태는 `생성`, `준비`, `실행`, `대기`, `종료` 상태가 있습니다.
+컴퓨터를 사용할 때 여러 프로세스들이 빠르게 번갈아 가면서 실행된다.
+그 과정에서 하나의 프로세스는 여러 상태를 거치며 실행된다. 그리고 운영체제는 프로세스의 상태를
+PCB를 통해 인식하고 관리한다.
 
-![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fbp3Mzr%2FbtrUh4mQvJo%2Fsm9kK4Z949elUg9KgARzk1%2Fimg.png)
+프로세스 상태를 표현하는 방식은 운영체제마다 조금씩 차이가 있지만,
+프로세스가 가질 수 있는 대표적인 상태는 `생성`, `준비`, `실행`, `대기`, `종료` 상태가 있다.
 
-위와 같은 도표를 프로세스 상태 다이어그램(process state diagram)이라고 합니다.
+<Image
+  src="https://user-images.githubusercontent.com/64428916/209461648-68db11d3-60c2-4208-a78b-c999cabbf896.png"
+  size="400px"
+/>
 
-## 생성 상태
+위와 같은 도표를 프로세스 상태 다이어그램(process state diagram)이라고 한다.
+
+### 생성 상태
 
 프로세스를 생성 중인 상태를 생성 상태(new)라고 합니다. 이제 막 메모리에 적재되어 PCB를 할당받은 상태입니다.
 생성 상태를 거쳐 실행할 준비가 완료된 프로세스는 곧바로 실행되지 않고 준비 상태가 되어 CPU의 할당을 기다립니다.
@@ -87,3 +87,4 @@ PCB를 통해 인식하고 관리합니다.
 ## Referecne
 
 - Operating Systems Concept
+- [프로세스 & 스레드](https://gyoogle.dev/blog/computer-science/operating-system/Process%20vs%20Thread.html)
