--- a/docs/operating-system/DeadLock.mdx
+++ b/docs/operating-system/DeadLock.mdx
@@ -1,14 +1,28 @@
+---
+title: DeadLock, 교착 상태란?
+---
+
 import Image from '@site/src/components/Image';
 
 # DeadLock, 교착 상태란?
 
-멀티 프로그래밍 환경 또는 멀티 스레드 환경에서는 여러 프로세스 또는 스레드가 한정된 자원을 동시에 사용하기위해 항상 경쟁 상태에 놓여 있다.
+멀티 프로그래밍 환경 또는 멀티 스레드 환경에서는 여러 프로세스 또는 스레드가 한정된 자원을 동시에 사용하기위해
+항상 경쟁 상태에 놓여 있다.
 어떤 이유로든 프로세스가 필요한 자원을 획득하지 못하고 영원히 자원을 기다리는 상태로 남아있는 것을 데드락이라고 한다.
 
-운영체제에서 데드락(교착상태)이란, 시스템 자원에 대한 요구가 뒤엉킨 상태이다.
+운영체제에서 데드락(교착상태)이란, 두개 이상의 프로세스나 스레드가 서로 자원을 얻지 못해서 다음 처리를 하지 못하는 상태이다.
+
+:::tip
+마치, 외나무 다리의 양 끝에서 서로가 비켜주기를 기다리고 있는 것과 같다.
+:::
 
 즉 둘이상의 프로세스가 다른 프로세스를 점유하고 있는 자원을 서로 기다릴 때 무한 대기에 빠지는 상황을 말한다.
 자원을 획득하지 못하고 있다는 점에서 기아 상태(starvation state)와 비슷하지만 이것은 영원히 헤어나올 수 없는 상태라는 점에서 차이가 있다.
 
-데드락을 이해하기 위해서는 컴퓨터 시스템에서 자원을 획득하는 과정을 먼저 알아야한다. 여기서 자원이란 CPU, 파일 메모리, 락객체등등 컴퓨터 시스템에서
-여러분이 사용할 수 있는 모든 것들을 총칭하는
+## 교착상태의 발생 조건
+
+1. 상호 배제(Mutual Exclusion): 자원은 한번에 한 프로세스만 사용할 수 있음
+2. 점유 대기(Hold and Wait): 최소한 하나의 자원을 점유하고 있으면서 다른 프로세스에 할당되어 사용하고
+   있는 자원을 추가로 점유하기 위해 대기하는 프로세스가 존재
+3. 비선점(Non Preemption): 다른 프로세스에 할당된 자원은 사용이 끝날 때까지 빼앗을 수 없음
+4. 순환 대기(Circular wait): 프로세스의 집합에서 순환 형태로 자원을 대기하고 있어야 함
