--- a/docs/operating-system/Process.mdx
+++ b/docs/operating-system/Process.mdx
@@ -54,7 +54,7 @@ PCB를 통해 인식하고 관리한다.
 프로세스를 생성 중인 상태를 생성 상태(new)라고 합니다. 이제 막 메모리에 적재되어 PCB를 할당받은 상태입니다.
 생성 상태를 거쳐 실행할 준비가 완료된 프로세스는 곧바로 실행되지 않고 준비 상태가 되어 CPU의 할당을 기다립니다.
 
-## 준비 상태
+### 준비 상태
 
 준비 상태(ready)는 당장이라도 CPU를 할당받아 실행할 수 있지만, 아직 자신의 차례가 아니기에 기다리고 있는 상태입니다.
 준비 상태 프로세스는 차례가 되면 CPU를 할당받아 실행 상태가 됩니다.
@@ -63,26 +63,45 @@ PCB를 통해 인식하고 관리한다.
 준비 상태인 프로세스가 실행 상태로 전환되는 것을 디스패치(dispatch)라고 합니다.
 :::
 
-## 실행 상태
+### 실행 상태
 
 실행 상태(running)은 CPU를 할당받아 실행 중인 상태를 의미합니다.
 실행 상태인 프로세스는 일정 시간동안만 CPU를 사용할 수 있습니다. 이 때 프로세스가 할당된 시간을 모두 사용한다면(타이머 인터럽트가 발생하면) 다시 준비 상태가 되고,
 실행 도중 입출력장치를 사용하여 입출력장치의 작업이 끝날 때까지 기다려야 한다면 대기 상태가 됩니다.
 
-## 대기 상태
+### 대기 상태
 
-프로세스는 실행 도중 입출장치를 사용하는 경우가 있습니다. 입출력 작업은 CPU에 비해 처리 속도가 느리기에, 입출력 작업을 요청한 프로세스는 입출력 장치가 입출력을
-끝낼 때 까지(입출력 완료 인터럽트를 받을 때까지) 기다려야 합니다. 이렇게 입출력장치의 작업을 기다리는 상태를 대기 상태(blocked)라고 합니다. 입출력 작업이
-완료되면 해당 프로세스는 다시 준비 상태로 CPU 할당을 기다립니다.
+프로세스는 실행 도중 입출장치를 사용하는 경우가 있습니다. 입출력 작업은 CPU에 비해 처리 속도가 느리기에,
+입출력 작업을 요청한 프로세스는 입출력 장치가 입출력을 끝낼 때 까지(입출력 완료 인터럽트를 받을 때까지) 기다려야 합니다.
+이렇게 입출력장치의 작업을 기다리는 상태를 대기 상태(blocked)라고 합니다.
+입출력 작업이 완료되면 해당 프로세스는 다시 준비 상태로 CPU 할당을 기다립니다.
 
 :::tip
-프로세스가 대기 상태가 되는 이유에 입출력 작업만 있는 것은 아닙니다. 조금 더 일반적으로 표현하자면 특정 이벤트가 일어나길 기다릴 때 프로세스는 대기 상태가 됩니다.
-다만, 프로세스가 대기 상태가 되는 대부분의 원인이 입출력 작업이기 때문에 '프로세스가 입출력 작업을 하면 대기 상태가 된다'고 생각해도 무방합니다.
+프로세스가 대기 상태가 되는 이유에 입출력 작업만 있는 것은 아닙니다.
+조금 더 일반적으로 표현하자면 특정 이벤트가 일어나길 기다릴 때 프로세스는 대기 상태가 됩니다.
+다만, 프로세스가 대기 상태가 되는 대부분의 원인이 입출력 작업이기 때문에 '프로세스가 입출력 작업을 하면 대기 상태가 된다'고
+생각해도 무방합니다.
 :::
 
-## 종료 상태
+### 종료 상태
 
 종료 상태(terminated)는 프로세스가 종료된 상태입니다. 프로세스가 종료되면 운영체제는 PCB와 프로세스가 사용한 메모리를 정리합니다.
+
+## 프로세스 특징 및 멀티 프로세싱의 단점
+
+<Image
+  src="https://magi82.github.io/images/2017-2-6-process-thread/01.png"
+  width="800px"
+/>
+<br />
+멀티 프로세싱 방식은 CPU에서 여러 프로세스를 로테이션으로 돌면서
+처리한다.(스케줄링 알고리즘)
+
+동작중인 프로세스가 해당 프로세스의 상태(Context)를 보관하고, 다음 순번의 프로세스가 동작하면서 이전에 보관했던
+프로세스의 상태(Context)를 복구하게 된다.
+
+이러한 일련의 과정을 Context Switching이라고 하는데 프로세스는 각각 독립된 메모리 영역이다보니 캐쉬 메모리
+초기화 등 꽤나 무거운 작업이 진행되고 오버헤드가 발생한다.
 
 ## Referecne
 
