--- a/docs/operating-system/Thread.mdx
+++ b/docs/operating-system/Thread.mdx
@@ -2,8 +2,10 @@
 title: Thread
 ---
 
+스레드는 프로세스 내에서 실행되는 여러 흐름의 단위이다.
+기본적으로 프로세스당 최소 1개의 스레드를 가지고 있고 그것을 메인 스레드라고 한다.
+
 - Light Weight Process라고 함
-- 하나의 프로세스에 여러개의 스레드 생성 가능
 - 스레드들은 동시에 실행 가능
 - 프로세스 안에 있으므로, 프로세스의 데이터를 모두 접근 가능
 
@@ -54,3 +56,7 @@ title: Thread
 - 프로세스 간의 통신(IPC) 보다 스레드 간의 통신의 비용이 적으므로 작업들 간의 통신의 부담이 줄어든다.
 - 스레드는 스택 영역을 제외한 모든 메모리의 영역을 공유한다.
 - Context Switching시 스레드는 Stack 영역만 처리하기 때문에 프로세스보다 전환의 속도가 빠르다.
+
+## Reference
+
+- [프로세스와 스레드에 대한 정리](https://magi82.github.io/process-thread/)
