docs: 멀티 스레딩의 단점

--- a/docs/operating-system/Thread.mdx
+++ b/docs/operating-system/Thread.mdx
@@ -57,6 +57,15 @@ title: Thread
 - 스레드는 스택 영역을 제외한 모든 메모리의 영역을 공유한다.
 - Context Switching시 스레드는 Stack 영역만 처리하기 때문에 프로세스보다 전환의 속도가 빠르다.
 
+### 멀티 스레드의 단점
+
+<Image
+  src="https://user-images.githubusercontent.com/63354527/229711879-69887d78-fdc9-4a3c-aa64-9a0bb270aca6.png"
+  width="800px"
+/>
+
+멀티 스레드는 스레드 중 한 스레드만 문제가 있어도 전체 스레드가 영향을 받는다.
+
 ## Reference
 
 - [프로세스와 스레드에 대한 정리](https://magi82.github.io/process-thread/)
