docs: 교착 상태의 발생 조건

--- a/docs/operating-system/DeadLock.mdx
+++ b/docs/operating-system/DeadLock.mdx
@@ -21,8 +21,19 @@ import Image from '@site/src/components/Image';
 
 ## 교착상태의 발생 조건
 
-1. 상호 배제(Mutual Exclusion): 자원은 한번에 한 프로세스만 사용할 수 있음
-2. 점유 대기(Hold and Wait): 최소한 하나의 자원을 점유하고 있으면서 다른 프로세스에 할당되어 사용하고
-   있는 자원을 추가로 점유하기 위해 대기하는 프로세스가 존재
-3. 비선점(Non Preemption): 다른 프로세스에 할당된 자원은 사용이 끝날 때까지 빼앗을 수 없음
-4. 순환 대기(Circular wait): 프로세스의 집합에서 순환 형태로 자원을 대기하고 있어야 함
+1. 상호 배제(Mutual Exclusion): 한번에 프로세스 하나만 자원을 사용할 수 있다. 공유되지 않는 자원이란
+   한번에 딱 하나의 프로세스만이 소유할 수 있는 자원이다. 만일 이 자원이 어떤 프로세스에게 할당되어 있는 중
+   다른 프로세스가 이 자원에 할당을 요청(Request)하면 그 다른 프로세스는 현재 프로세스가 자원을 반환할 때까지
+   대기 상태에 있게된다.
+2. 점유와 대기(Hold and Wait): 자원을 최소한 하나 보유하고, 다른 프로세스에 할당된 자원을 점유하기 위해
+   대기하는 프로세스가 존재해야한다.
+3. 비선점 (No Preemption): 이미 할당된 자원을 강제로 빼앗을 수 없다. 자원을 획득함에 있어서 우선권이 없다.
+   그 어떤 프로세스도 다른 프로세스가 소유하고 있는 자원을 강제로 빼앗아 올 수 없다. 자원을 획득할 수 있는 유일한
+   방법은 다른 어떤 프로세스도 해당 자원을 점유하고 있지 않을 때 뿐이다.
+4. 순환 대기(Circular Wait): 대기 프로세스의 집합이 순환 형태로 자원을 대기하고 있어야 한다. 프로세스들이
+   상대방이 필요한 자원을 점유한 상태로 상대방이 가지고 있는 자원을 요청하고 있는 상태이다. 예를 들어 프로세스 P1, P2,
+   P3이 있다면 P1은 P2가 가지고 있는 자원이 해제 되길 기다리고, P2는 P3이 가진 자원, P3는 그다음..과 같은 형식으로
+   가장 마지막 프로세스의 Pn가 다시 P1이 가진 자원을 요청하고 해제 되길 기다리는 형태가 아래 그림처럼 하나의 순환
+   구조를 이룬다.
+
+   <Image src="https://user-images.githubusercontent.com/63354527/229716861-b50f07ca-4e2d-4350-ad6e-4067f9d4406d.png" />
