--- a/docs/operating-system/프로세스 동기화.mdx
+++ b/docs/operating-system/프로세스 동기화.mdx
@@ -3,3 +3,13 @@ title: 프로세스 동기화
 ---
 
 import Image from '@site/src/components/Image';
+
+프로세스 동기화(Process Synchronization)은 여러 프로세스가 공유하는 자원의 일관성을 유지하는 것이다.
+
+여러 프로세스가 서로 협력해 공유자원을 사용하는 상황에서 경쟁 조건(race condition)이 발생하면 공유자원의
+신뢰성이 떨어진다. 이를 방지하기 위해 프로세스들이 공유자원을 사용할 때 특별한 규칙을 만드는 것
+
+## Race condition
+
+여러 프로세스(또는 스레드)가 공유 자원에 동시에 접근할 때 공유 자원에 대한 접근 순서에 따라 실행 결과가 달라질
+수 있는 상황. 동시에 접근할 때 자료의 일관성을 해치는 결과가 나올 수 있다.
