docs: PCB 내용 보완

--- a/docs/operating-system/개념/2.mdx
+++ b/docs/operating-system/개념/2.mdx
@@ -19,8 +19,8 @@ export const Image = ({ src, size }) => {
         width={size}
         height={size}
         style={{
-          display: "block",
-          margin: "auto",
+          display: 'block',
+          margin: 'auto',
         }}
       />
       <br />
