--- a/docs/operating-system/개념/3.mdx
+++ b/docs/operating-system/개념/3.mdx
@@ -25,8 +25,8 @@ export const Image = ({ src, size }) => {
         width={size}
         height={size}
         style={{
-          display: "block",
-          margin: "auto",
+          display: 'block',
+          margin: 'auto',
         }}
       />
       <br />
@@ -62,7 +62,6 @@ export const Image = ({ src, size }) => {
   단점: 자원 독점 이용 가능하여 여러 프로세스들이 골고루 자원 사용하는 것이 힘들다.
 
 ## CPU 스케줄링 알고리즘
-
 
 **FCFS 스케줄링 (First Come First Served Scheduling, 선입 선처리 스케줄링)**
 
