docs: 가상 메모리

--- a/docs/operating-system/Thread.mdx
+++ b/docs/operating-system/Thread.mdx
@@ -33,7 +33,7 @@ title: Thread
 
 상호배제, 진행, 한정된 대기를 충족해야함
 
-## 멀티 프로세스 대신 멀티 스레드를 사용하는 이유?
+### 멀티 프로세스 대신 멀티 스레드를 사용하는 이유?
 
 <Image
   src="https://gmlwjd9405.github.io/images/os-process-and-thread/multi-thread.png"
@@ -57,15 +57,38 @@ title: Thread
 - 스레드는 스택 영역을 제외한 모든 메모리의 영역을 공유한다.
 - Context Switching시 스레드는 Stack 영역만 처리하기 때문에 프로세스보다 전환의 속도가 빠르다.
 
-### 멀티 스레드의 단점
+### 멀티 스레딩의 장점
+
+프로세스를 이용하여 동시에 처리하던 일을 스레드로 구현할 경우 메모리 공간과 시스템
+자원 소모가 줄어든다. 스레드 간의 통신이 필요한 경우에도 별도의 자원을 이용하는 것이 아니라 전역 변수의
+공간 또는 동적으로 할당된 공간인 Heap 영역을 이용하여 데이터를 주고받을 수 있다. 그렇기 때문에 프로세스 간
+통식 방법에 비해 스레드 간의 통신 방법이 훨씬 간단하다. 심지어 스레드의 Context Switching는 프로세스의
+Context Switching와는 달리 캐시 메모리를 비울 필요가 없기 때문에 더 빠르다. 따라서 자원 소모가 자연스럽게
+프로그램의 응답 시간이 단축된다.
+
+### 멀티 스레딩의 단점
+
+멀티 프로세스 기반으로 프로그래밍을 할 때는 프로세스 간 공유하는 자원이 없기 때문에 동일한 자원에 동시에 접근하는 일이 없었지만
+멀티 스레딩을 기반으로 프로그래밍할 때는 이 부분을 신경써줘야 한다. 서로 다른 스레드가 데이터와 힙 영역을 공유하기 때문에 어떤 스레드가
+다른 스레드에서 사용중인 변수나 자료구조에 접근하여 엉뚱한 값을 읽어오거나 수정할 수 있다. 그렇기 때문에 멀티 스레딩 환경에서는 동기화
+작업이 필요하다. 동기화를 통해 작업 처리 순서를 컨트롤 하고 공유 자원에 대한 접근을 컨트롤 하는 것이다. 하지만 이로 인해 병목 현상이
+발생하여 성능이 저하될 가능성이 높다. 그러므로 과도한 락으로 인한 병목 현상을 줄여야 한다.
+
+### 멀티 스레드 vs 멀티 프로세스
 
 <Image
   src="https://user-images.githubusercontent.com/63354527/229711879-69887d78-fdc9-4a3c-aa64-9a0bb270aca6.png"
   width="800px"
 />
+<br />
 
-멀티 스레드는 스레드 중 한 스레드만 문제가 있어도 전체 스레드가 영향을 받는다.
+멀티 스레드는 멀티 프로세스보다 적은 메모리 공간을 차지하고 문맥 전환이 빠르다는
+장점이 있지만, 오류로 인해 하나의 스레드가 종료되면 전체 스레드가 종료될 수
+있다는 점과 동기화 문제를 안고 있다. 반면 멀티 프로세스 방식은 하나의 프로세스가
+죽더라도 다른 프로세스가 영향을 끼치지 않고 정상적으로 수행된다는 장점이 있지만,
+멀티 스레드보다 많은 메모리 공간과 CPU 시간을 차지한다는 단점이 존재한다.
 
 ## Reference
 
 - [프로세스와 스레드에 대한 정리](https://magi82.github.io/process-thread/)
+- [멀티 스레드](https://github.com/JaeYeopHan/Interview_Question_for_Beginner/tree/master/OS#%EB%A9%80%ED%8B%B0-%EC%8A%A4%EB%A0%88%EB%93%9C)
