docs: IPC 내용 보충

--- a/docs/operating-system/Thread.mdx
+++ b/docs/operating-system/Thread.mdx
@@ -2,12 +2,21 @@
 title: Thread
 ---
 
-스레드는 프로세스 내에서 실행되는 여러 흐름의 단위이다.
-기본적으로 프로세스당 최소 1개의 스레드를 가지고 있고 그것을 메인 스레드라고 한다.
+# Thread
 
-- Light Weight Process라고 함
-- 스레드들은 동시에 실행 가능
-- 프로세스 안에 있으므로, 프로세스의 데이터를 모두 접근 가능
+스레드는 프로세스 내에서 실행되는 여러 흐름의 단위이다. 스레드마다 다른 실행 흐름을 가지기 때문에 각자
+레지스터 집합과 스택 영역을 가지며 힙 영역은 공유된다. 여러 스레드가 동시에 실행하는 방법은 I/O 작업과
+같이 시간이 오래 걸리는 작업 중에 CPU 사용이 많은 작업을 하고 싶을 때와 같은 상황에 유용하게 쓰일 수 있다.
+또한, 서버 프로그램과 같이 워커(Worker)가 여럿 필요한 경우에도 유용하다. 만약 멀티 프로세서 환경에서 어떤
+작업들이 서로 의존성이 없다면 동시에 실행함으로써 속도를 향상할 수 있다. 스레드는 실행 흐름은 독립적이지만
+메모리 공간은 공유하고 있기 때문에 경량 프로세스(Light Weight Process)라고 부르기도 한다.
+
+<Image
+  src="https://user-images.githubusercontent.com/63354527/230275624-a310a4ac-ec7f-4b25-b621-3f740aa78a96.png"
+  width="800px"
+/>
+
+기본적으로 프로세스당 최소 1개의 스레드를 가지고 있고 그것을 메인 스레드라고 한다.
 
 <Image
   src="https://user-images.githubusercontent.com/63354527/229687230-26a46256-6861-4069-8908-1cd3dc545642.png"
@@ -15,6 +24,14 @@ title: Thread
 />
 
 ## 멀티 스레드
+
+{/_ 멀티 스레딩을 지원하는 방법으로는 다대일, 일대일, 다대다 방법이 있다. 일반적으로 사용자가 생성하는
+스레드는 유저 수준 스레드라고 분류하고 실제 시스템에서 실행되는 스레드를 커널 수준 스레드라고 하는데,
+유저 수준 스레드와 커널 수준 스레드를 어떤 방식으로 맵핑하느냐의 차이다. 다대일 모델은 여러 유저 수준
+스레드를 하나의 커널 수준 스레드에 사상하고, 일대일 모델은 유저 수준 스레드마다 커널 수준 스레드에 사상한다.
+다대다 모델은 여러 유저 수준 스레드를 여러 커널 수준 쓰레드에 사상한다. 한 유저 수준 스레드에서 Blocking
+연산을 하는 경우 다른 모든 유저 스레드가 멈춘다는 점에서 다대일 모델은 통용되기 어렵다.
+커널 수준 스레드는 생성하기에 오버헤드가 있으므로 일대일 모델보다는 현실적으로 다대다 모델이 사용된다. _/}
 
 하나의 응용 프로그램에서 여러 스레드를 구성해 각 스레드가 하나의 작업을 처리하는 것
 
