--- a/docs/operating-system/IPC.mdx
+++ b/docs/operating-system/IPC.mdx
@@ -2,3 +2,22 @@
 
 IPC란 Process들 간에 데이터 및 정보를 주고 받기 위한 메커니즘으로,
 Kernel에서 IPC를 위한 도구를 System Call의 형태로 제공한다.
+
+종종 여러 프로세스가 협업할 필요가 있는 경우가 있다. 예를 들어 브라우저는
+렌더러 프로세스와 각 플러그인 별 프로세스를 가지는 프로세스이다.
+
+렌더러 프로세스는 HTML/CSS를 읽어 렌더링하고 인터프리터로 JS 코드를 실행해야 한다.
+각 역할별 프록르ㅐㅁ을 분리하여 모듈화 한 것이다. 이런 실행환경에서는 프로세스 간의 통신이
+가능해야한다. 프로세스간 통신은 운영체제의 도움이 필요하다.
+
+프로세스는 보안 등의 문제로 각자 독립된 메모리 공간을 가지기 때문에 단순 메모리 값 변경은
+다른 프로세스에게 데이터를 전달하는 방법으로 사용될 수 없다.
+
+프로세스간 통신을 하려면 공유 메모리(Shared Memory System)을 사용하는 방법이있다.
+OS에게 어떤 영역의 메모리를 다른 프로세스와 공유하고 싶다는 요청을 하는 것이다.
+
+두 번째로 메시지 전달(Message-Passing Systems)을 사용하는 방법이 있다.
+
+프로세스와 프로세스 간에 메시지를 전달할 수 있는 방법을 만드는 것이다.
+메시지를 전달하는 방법은 OS 내부적으로 메시지 큐를 두는 방법, 파이프를 만드는 방법,
+소켓을 이용하는 방법 등 여러 가지 방법으로 구현될 수 있다.
