--- a/docs/operating-system/Paging.mdx
+++ b/docs/operating-system/Paging.mdx
@@ -50,3 +50,9 @@
 1. 가상 주소 30번지가 어느 페이지에 있는지 찾는다. 페이지 3의 0번째 위치에 있다.
 2. 페이지 테이블의 페이지 3으로 가서 해당 페이지가 프레임 1에 있다는 것을 알아낸다.
 3. 물리 메모리 프레임 1의 0번째 위치에 접근한다. 이 주소가 가상 주소 30번지의 물리 주소이다.
+
+## 페이지 교체(Page Replacement)
+
+원하는 페이지가 물리 메모리에 존재하지 않으면 어쩔 수 없이 어떤 페이지는 내려놔야 한다.
+원하는 페이지가 물리 메모리에 없으면 페이지 폴트(Page fault)가 일어났다고 하고, 물리 메모리에서
+내려갈 페이지를 Victim이라고 한다. Victim을 선택하는 알고리즘은 여러가지가 있다.
