--- a/docs/network/3,4 Way Handshaking.mdx
+++ b/docs/network/3,4 Way Handshaking.mdx
@@ -37,14 +37,16 @@ import Image from '@site/src/components/Image';
   src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcQfd0N%2FbtrEtMWYTYr%2FImpYh4gAvgtw2nafO4LP3k%2Fimg.png"
   width="500px"
 />
+
 <br />
-여기서도 TCP의 컨트롤 비트가 사용되며 해당 단계에서는 ACK(승인), FIN(종료)
-플래그가 사용된다.
+여기서도 TCP의 컨트롤 비트가 사용되며 해당 단계에서는 ACK(승인), FIN(종료) 플래그가
+사용된다.
 
 <Image
   width="500px"
   src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbA6dDe%2FbtrEuq0cFAy%2FWIG0FALizbdACPkFZ46J1K%2Fimg.png"
 />
+
 <br />
 
 1. 클라이언트는 서버에게 연결을 종료하겠다는 의미인 FIN 패킷을 전송한다.
