--- a/docs/network/OSI 7 Layer.mdx
+++ b/docs/network/OSI 7 Layer.mdx
@@ -3,6 +3,13 @@ title: OSI 7 Layer
 sidebar_position: 2
 ---
 
+OSI 모형(Open Systems Interconnection Reference Model)은 국제 표준화기구(ISO)에서
+개발한 모델로, 컴퓨터 네트워크 프로토콜 디자인과 통신을 계층으로 나누어 설명한 것이다. 일반적으로
+OSI 7 계층 모형이라고 한다. 이 모델은 프로토콜을 기능별로 나눈 것이다. 각 계층은 하위 계층의
+기능만을 이용하고, 상위 계층에게 기능을 제공한다.
+
+프로토콜 스택 혹은 스택은 이러한 계층들로 구성되는 프로토콜 시스템이 구현된 시스템을 가리키는데,
+
 OSI 참조 모델은 데이터 통신을 7 단계로 나누는데 이 단계를 계층(Layer)이라고 한다.
 각 계층마다 각 계층의 역할을 하는 프로토콜이 존재한다. 각 계층은 각각 독립해 있으며 하위 계층은 상위 계층을 위해
 일하고 상위 계층은 하위 계층에 대해 관여하지 않는다.
