docs: OSI 7 Layer

--- a/docs/network/3,4 Way Handshaking.mdx
+++ b/docs/network/3,4 Way Handshaking.mdx
@@ -31,7 +31,7 @@ import Image from '@site/src/components/Image';
 
 ## 4 Way Handshaking
 
-패킷 통신이 끝났다면, TCP 연결을 종료해야 한다.
+패킷 통신이 끝k났다면, TCP 연결을 종료해야 한다.
 
 <Image
   src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcQfd0N%2FbtrEtMWYTYr%2FImpYh4gAvgtw2nafO4LP3k%2Fimg.png"
