--- a/docs/network/OSI 7 Layer.mdx
+++ b/docs/network/OSI 7 Layer.mdx
@@ -20,6 +20,33 @@ OSI 참조 모델은 데이터 통신을 7 단계로 나누는데 이 단계를 
 - 문제가 발생했을 때 문제가 발생한 곳을 특정할 수 있기에 보수가 용이하다.
 - 통신 과정을 단계별로 파악할 수 있다.
 
+## Application Layer
+
+사용자가 UI로 접하는 응용 프로그램과 관련된 계층으로 HTTP, FTP, DHCP, SMTP, DNS등이 있다.
+여기에 속한 프로토콜들은 어떠한 방법으로든 사용자와 직접 접하게 된다.(Data + HTTP Header)
+
+## Transport Layer
+
+송신자와 수신자의 논리적 연결(Connection)을 담당하는 부분으로, 신뢰성 있는 연결을 유지할 수 있도록
+도와준다. 즉 Endpoint(사용자) 간의 연결을 생성하고 데이터를 얼마나 보냈는지 얼마나 받았는지,
+제대로 받았는지 등을 확인한다. TCP, UDP가 대표적이다.(Data + HTTP Header + TCP Header)
+
+## Network Layer
+
+IP(Internet Protocol)이 활용되는 부분으로, 한 Endpoint가 다른 Endpoint로 가고자할 경우,
+경로와 목적지를 찾아준다. 이를 Routing이라고 하며 대역이 다른 IP들이 목적지를 향해 제대로 찾아갈
+수 있도록 돕는 역할을 한다.(Data + HTTP Header + TCP Header + IP Header)
+
+## DataLink Layer
+
+같은 네트워크 대역을 사용하는 단말들에 대해 신뢰성 있는 전송을 보장한다. 즉 "MAC Address"를
+활용하여 같은 구간 내의 Endpoint 혹은 Switching 장비에 전달하며, 1 Layer에 해당하는 물리
+계층에 생길 수 있는 오류를 찾아낸다.(Data + HTTP Header + TCP Header + IP Header + Ethernetframe Header)
+
+## Physical Layer
+
+'Cable'로 대표되는 물리적인 계층으로 전기적 신호가 전송되는 구간이다.
+
 ## 물리 계층(Physical Layer)
 
 0과 1의 데이터를 연속적인 아날로그 신호로 바꾸어 전선으로 흘려보내고,
@@ -28,4 +55,8 @@ OSI 참조 모델은 데이터 통신을 7 단계로 나누는데 이 단계를 
 :::tip
 물리 계층에선 데이터의 전달만을 담당할 뿐 데이터의 오류 체크, 데이터의 상태 등 데이터의 내부엔 관심이 없다.
 
-- :::
+:::
+
+## Reference
+
+- [OSI 7 Layer](https://aws-hyoh.tistory.com/50)
