--- a/docs/network/TCP IP.mdx
+++ b/docs/network/TCP IP.mdx
@@ -4,24 +4,19 @@ title: TCP/IP
 
 import Image from '@site/src/components/Image';
 
-컴퓨터 네트워크는 인터넷과 관련이 깊다. **컴퓨터 네트워크를 배운다는 것은 곧 인터넷에서 사용되는 TCP/IP 기술을 배운다는 것**과 같다.
-과거에는 다양한 네트워크 기술이 각각 독립적으로 존재했었지만, **오늘날에는 TCP/IP를 중심으로 통합되고 표준화**되었다. 그래서
-가정이나 기업에서 사용하는 로컬 컴퓨터 네트워크를 인터넷에 연결하는데 더이상 큰 어려움이 없다. 만약 네트워크 관련 기술이 새롭게 개달된다고
-하더라고 TCP/IP를 중심으로 통합되므로 신기술의 도입과 적용이 이전보다 빨라질 것이다. 또한 인터넷이 기존의 통신망을 대체함으로써
-지구 반대편에 있는 사람들과 실시간으로 전화해도 과도한 통화료를 걱정하지 않아도 된다. 이 모든 혜택이 바로 인터넷과 TCP/IP가 있기에
-가능한 일이다.
+# TCP/IP
 
-- 인터넷: 전 세계에 걸쳐 파일 전송 등의 데이터 통신 서비스를 받을 수 있는 컴퓨터 네트워크 시스템
-- TCP/IP: 인터넷에서 컴퓨터들이 서로 정보를 주고 받는데 쓰이는 프로토콜의 집합
-- OSI 7 계층 대신 실질적으로 쓰이는 프로토콜
+프로토콜 스위트란 프로토콜의 집합을 의미한다. 그 집합 속에서 네트워크 커뮤티케이션에서 맡고 있는 역할에 따라 계층이
+나눠진다.(프로토콜 스택이라고도 한다.)
 
-컴퓨터 네트워크 안에서 다양한 프로그램과 데이터, 그리고 통신 장비가 한데 어우려져 동작하고 있다. 이러한 동작들은 각각의 역할에 따라 크게
-애플리케이션 계층, 트랜스포트 계층, 인터넷 계층, 네트워크 인터페이스 계층의 4개의 계층이 분류되고 , 위아래로 인접한 계층끼리 정보를
-주고 받으면서 네트워크 통신을 한다.
+TCP와 IP는 각각 프로토콜 스위트에 속하는 구성원이며, 그저 다른 계층의 프로토콜들과 긴밀하게 연결되어있고 중심적인
+프로토콜이기 때문에 프로토콜 스위트에 TCP/IP라는 이름이 붙여진 것이다.
 
-Network Access Layer, Internet Layer, Transport Layer, Application Layer로 이루어진다.
+따라서 TCP/IP는 프로토콜 스위트로, TCP와 IP는 각각의 프로토콜로 인지를 하고 있는 것이 도움이된다.
+TCP/IP 프로토콜 스위트는 네트워크 구조를 파악하거나 설계에 도움을 주기 위해 만들어진 "모델"이고, TCP/IP는 실제로
+사용되고있는 프로토콜이다.
 
-<Image src="https://velog.velcdn.com/images/tnehd1998/post/6ad53c71-4a6c-466f-a3b8-d8cd5b56561f/image.jpeg" />
+{/* <Image src="https://velog.velcdn.com/images/tnehd1998/post/6ad53c71-4a6c-466f-a3b8-d8cd5b56561f/image.jpeg" /> */}
 
 ## IP(Internet Protocol)
 
@@ -239,9 +234,19 @@ IP 프로토콜
   width="500px"
 />
 
+## OSI 모델과 TCP/IP 모델은 어떤 차이가 있을까
+
+TCP/IP 모델은 인터넷에서 통신을 하기 위한 프로토콜을 설명하기 위해 만들어졌고,
+OSI 모델은 표준화된 네트워크 프로토콜을 설계하기 위해 만들어졌다.
+
+다만 TCP/IP 모델은 인터넷의 발전에 따라 계속해서 업데이트되어 왔으며, 실제로 인터넷에서
+사용되는 프로토콜들을 기반으로 수정되어왔다. 그래서 TCP/IP 모델은 실제로 사용되고 있는
+프로토콜들을 설명하기위해 더 적합하다.
+
 ## Reference
 
 - TCP/IP 쉽게, 더쉽게
 - [OSI 7 Layer , TCP/IP 4 Layer](https://velog.io/@tnehd1998/OSI-7-Layer-TCPIP-4-Layer)
 - [개알못을 위한 TCP/IP의 개념](https://brunch.co.kr/@wangho/6#comment)
 - [TCP/IP란 무엇이며 어떤 원리로 작동하나요?](https://nordvpn.com/ko/blog/tcp-ip-protocol/)
+- [TCP/IP 와 TCP, IP 를 다르게 읽어야한다](https://velog.io/@ksi05503/tcp-ip)
