--- a/docs/network/컴퓨터 네트워크.mdx
+++ b/docs/network/컴퓨터 네트워크.mdx
@@ -7,6 +7,23 @@ import Image from '@site/src/components/Image';
 
 # 컴퓨터 네트워크
 
+**컴퓨터 네트워크를 배운다는 것은 곧 인터넷에서 사용되는 TCP/IP 기술을 배운다는 것**과 같다.
+과거에는 다양한 네트워크 기술이 각각 독립적으로 존재했었지만, **오늘날에는 TCP/IP를 중심으로 통합되고 표준화**되었다.
+그래서 가정이나 기업에서 사용하는 로컬 컴퓨터 네트워크를 인터넷에 연결하는데 더이상 큰 어려움이 없다.
+만약 네트워크 관련 기술이 새롭게 개달된다고하더라고 TCP/IP를 중심으로 통합되므로 신기술의 도입과 적용이 이전보다 빨라질 것이다.
+또한 인터넷이 기존의 통신망을 대체함으로써 지구 반대편에 있는 사람들과 실시간으로 전화해도 과도한 통화료를 걱정하지 않아도 된다.
+이 모든 혜택이 바로 인터넷과 TCP/IP가 있기에 가능한 일이다.
+
+- 인터넷: 전 세계에 걸쳐 파일 전송 등의 데이터 통신 서비스를 받을 수 있는 컴퓨터 네트워크 시스템
+- TCP/IP: 인터넷에서 컴퓨터들이 서로 정보를 주고 받는데 쓰이는 프로토콜의 집합
+- OSI 7 계층 대신 실질적으로 쓰이는 프로토콜
+
+컴퓨터 네트워크 안에서 다양한 프로그램과 데이터, 그리고 통신 장비가 한데 어우려져 동작하고 있다. 이러한 동작들은 각각의 역할에 따라 크게
+애플리케이션 계층, 트랜스포트 계층, 인터넷 계층, 네트워크 인터페이스 계층의 4개의 계층이 분류되고 , 위아래로 인접한 계층끼리 정보를
+주고 받으면서 네트워크 통신을 한다.
+
+Network Access Layer, Internet Layer, Transport Layer, Application Layer로 이루어진다.
+
 컴퓨터 네트워크는 여러 대의 컴퓨터를 서로 연결하여 서로 데이터를 주고 받을 수 있도록 망이 사전에 구축된 것을 말한다.
 연결되는 컴퓨터의 대수가 많아질수록 네트워크의 규모는 커지고, 규모가 커진만큼 더 다양한 정보를 교환하거나 통신방식을 사용할 수 있다.
 
