--- a/docs/operating-system/뮤텍스와 세마포어.mdx
+++ b/docs/operating-system/뮤텍스와 세마포어.mdx
@@ -1,5 +1,13 @@
 # 뮤텍스와 세마 포어
 
+## 임계 구역(Critical Section)
+
+여러 프로세스가 데이터를 공유하며 수행될 때, 각 프로세스에서 공유 데이터를 접근하는
+프로그램 코드 부분
+
+공유 데이터를 여러 프로세스가 동시에 접근할 때 잘못된 결과를 만들 수 있기 때문에,
+한 프로세스가 임계 구역을 수행할 때는 다른 프로세스가 접근하지 못하도록 해야 한다.
+
 ## 뮤텍스
 
 - 공유된 자원의 데이터를 여러 스레드가 접근하는 것을 막는 것
@@ -38,3 +46,7 @@ Mutex의 경우 Mutex를 소유하고 있는 스레드가 이 Mutex를 해제할
 
 Semaphore는 시스템 범위에 걸쳐있고 파일 시스템상의 파일 형태로 존재하는 반면 Mutex는 프로세스 범위를 가지며
 프로세스가 종료될 때 자동으로 Clean up된다.
+
+## Reference
+
+- [뮤텍스와 세마포어](https://gyoogle.dev/blog/computer-science/operating-system/Semaphore%20&%20Mutex.html)
