--- a/docs/operating-system/Paging.mdx
+++ b/docs/operating-system/Paging.mdx
@@ -56,3 +56,7 @@
 원하는 페이지가 물리 메모리에 존재하지 않으면 어쩔 수 없이 어떤 페이지는 내려놔야 한다.
 원하는 페이지가 물리 메모리에 없으면 페이지 폴트(Page fault)가 일어났다고 하고, 물리 메모리에서
 내려갈 페이지를 Victim이라고 한다. Victim을 선택하는 알고리즘은 여러가지가 있다.
+
+## Reference
+
+- 쉽게 배우는 운영체제
