--- a/docs/operating-system/면접/프로세스와 스레드의 차이에 대해서 설명해주세요.mdx
+++ b/docs/operating-system/면접/프로세스와 스레드의 차이에 대해서 설명해주세요.mdx
@@ -1,20 +1,27 @@
 ---
-title: 프로세스와 스레드
+title: 프로세스와 스레드의 차이에 대해서 설명해주세요.
+description: 운영체제가 시스템의 자원을 어떤 단위로 할당하고 이 자원을 어떻게 사용하느냐에 대한 질문입니다.
 ---
+
+## 질문의 의도
 
 프로세스와 스레드에 대한 질문은 결국 운영체제가 시스템의 자원을 어떤 단위로 할당하고,
 프로세스와 스레드는 이 자원을 어떻게 사용하느냐를 알고 있냐에 대한 질문이다.
 
-프로세스는 실행되고 있는 프로그램의 인스턴스라고 생각할 수 있다.
+## 프로세스
+
+**프로세스는 실행되고 있는 프로그램의 인스턴스**라고 생각할 수 있다.
 프로세스는 CPU 시간이나 메모리등의 시스템 자원이 할당되는 독립적인 개체다.
 각 프로세스는 별도의 주소공간에서 실행되며, 한 프로세스는 다른 프로세스의 변수나 자료구조에 접근할 수 없다.
 한 프로세스가 다른 프로세스의 자원에 접근하려면 프로세스가 통신을 사용해야 한다.
 프로세스간 통신방법으로는 파이프, 파일, 소켓 등을 이용한 방법이 있다.
 
-스레드는 프로세스 안에 존재하며 프로세스의 자원(힙 공간등)을 공유한다.
-같은 프로세스 안에 여러 스레드들은 같은 힙 공간을 공유한다.
-반면에 프로세스는 다른 프로세스의 메모리에 직접 접근할 수 없다.
-각각의 스레드는 별도의 레지스터와 스택을 갖지만, 힙 메모리는 서로 읽고 쓸 수 있다.
+## 스레드
+
+**스레드는 프로세스 안에 존재하며 프로세스의 자원(힙 공간등)을 공유**한다.
+같은 프로세스 안에 여러 스레드들은 **같은 힙 공간을 공유**한다.
+반면에 **프로세스는 다른 프로세스의 메모리에 직접 접근할 수 없다.**
+각각의 **스레드는 별도의 레지스터와 스택**을 갖지만, **힙 메모리는 서로 읽고 쓸 수 있다.**
 
 스레드는 프로세스의 특정한 수행 경로와 같다.
 한 스레드가 프로세스 자원을 변경하면, 다른 이웃 스레드(sibling thread)도 그 변경 결과를 즉시 볼 수 있다.
